--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,9 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 
-theme: "Cayman"
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 # Basic Site Settings
 locale                   : "en-US"
