--- a/_config.yml
+++ b/_config.yml
@@ -26,20 +26,20 @@ repository               : "heqi511.github.io"
 author:
   # Biographic information
   avatar           : "avatar.jpg"
-  name             : "Your Sidebar Name"
+  name             : "Qi He"
   pronouns         : # example: "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : ""
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "UMD"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "qhe123@umd.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  orcid            : #
+  pubmed           : #
   researchgate     : # URL
 
   # Repositories and software development
