--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
