--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /images/avatar.jpg
+    url: /cv/
     
   # - title: "Guide"
   #   url: /markdown/
