--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title                    : "Qi He homepage"
 title_separator          : "-"
 name                     : &name "Qi He"
 description              : &description "PhD student in UMD CS"
-url                      : https://heqi511.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://heqi0511.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "heqi511.github.io"
 
@@ -152,6 +152,7 @@ include:
   - .htaccess
   - _pages
   - files
+  - images
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
