--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /files/cv.md
+    url: /_pages/cv.md
     
   # - title: "Guide"
   #   url: /markdown/
